force-app/main/default/objects/Gift__c/Gift__c.object-meta.xml
<CustomObject>
    <description>DELETE?  OLD TEST OBJECT FROM INITIAL LGL IMPORT</description>
    <label>Gift</label>
    <nameField>
        <displayFormat>Gift-{000000}</displayFormat>
        <label>Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>