force-app/main/default/objects/Gift__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gifts</relationshipLabel>
    <relationshipName>Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>