force-app/main/default/objects/Gift__c/fields/Anonymous_Gift__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous Gift?</label>
    <type>Checkbox</type>
</CustomField>