force-app/main/default/objects/Gift__c/fields/Check_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Check_Reference_No__c</fullName>
    <label>Check/Reference No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>