force-app/main/default/objects/Gift__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gifts (Contact)</relationshipLabel>
    <relationshipName>Gifts1</relationshipName>
    <type>Lookup</type>
</CustomField>