force-app/main/default/objects/Gift__c/fields/Deposited_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Amount__c</fullName>
    <label>Deposited Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>