force-app/main/default/objects/Gift__c/fields/External_Gift_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Gift_ID__c</fullName>
    <label>External Gift ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>