force-app/main/default/objects/Gift__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Gifts</relationshipLabel>
    <relationshipName>Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>