force-app/main/default/objects/Gift__c/fields/Gift_Category__c.field-meta.xml
<CustomField>
    <fullName>Gift_Category__c</fullName>
    <label>Gift Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Individuals</fullName>
            </value>
            <value>
                <fullName>Matching Gift</fullName>
            </value>
            <value>
                <fullName>Monthly Donation</fullName>
            </value>
            <value>
                <fullName>Organizations</fullName>
            </value>
            <value>
                <fullName>Selden-Ekornes Event</fullName>
            </value>
            <value>
                <fullName>Special Events</fullName>
            </value>
            <value>
                <fullName>2015 CA - Artist Chair</fullName>
            </value>
            <value>
                <fullName>2015 CA Fund-A-Family</fullName>
            </value>
            <value>
                <fullName>2015 Chair Affair Sponsorship</fullName>
            </value>
            <value>
                <fullName>2015 Chair Affair Seats Around</fullName>
            </value>
            <value>
                <fullName>2013 Chair Affair Auction Item</fullName>
            </value>
            <value>
                <fullName>2013 Chair Affair Seats Around</fullName>
            </value>
            <value>
                <fullName>2013 Chair Affair Services</fullName>
            </value>
            <value>
                <fullName>2014 Chair Affair Auction Item</fullName>
            </value>
            <value>
                <fullName>2014 Chair Affair Seats Around</fullName>
            </value>
            <value>
                <fullName>2014 Chair Affair Services</fullName>
            </value>
            <value>
                <fullName>2015 Chair Affair Chairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>