force-app/main/default/objects/Gift__c/fields/Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Date__c</fullName>
    <label>Gift Date</label>
    <type>Date</type>
</CustomField>