force-app/main/default/objects/Gift__c/fields/Gift_Note__c.field-meta.xml
<CustomField>
    <fullName>Gift_Note__c</fullName>
    <label>Gift Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>