force-app/main/default/objects/Gift__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>In Honor of</fullName>
            </value>
            <value>
                <fullName>In Kind</fullName>
            </value>
            <value>
                <fullName>In Memory of</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>