force-app/main/default/objects/Gift__c/fields/LGL_Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>LGL_Constituent_ID__c</fullName>
    <label>LGL Constituent ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>