force-app/main/default/objects/Gift__c/fields/LGL_Gift_ID__c.field-meta.xml
<CustomField>
    <fullName>LGL_Gift_ID__c</fullName>
    <label>LGL Gift ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>