force-app/main/default/objects/Gift__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Deposit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Online CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>