force-app/main/default/objects/Gift__c/fields/Pledge_Payment__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pledge Payment?</label>
    <type>Checkbox</type>
</CustomField>