force-app/main/default/objects/Gift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Campaign__c</columns>
    <columns>Gift_Amount__c</columns>
    <columns>Gift_Category__c</columns>
    <columns>Fund__c</columns>
    <columns>Gift_Type__c</columns>
    <columns>Gift_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>